--- a/unihub/pom.xml
+++ b/unihub/pom.xml
@@ -136,5 +136,6 @@
 	<modules>
 		<module>users-service</module>
 		<module>search-service</module>
+		<module>post-service</module>
 	</modules>
 </project>
