--- a/unihub/users-service/pom.xml
+++ b/unihub/users-service/pom.xml
@@ -16,6 +16,22 @@
             <artifactId>shiro-core</artifactId>
             <version>1.3.2</version>
         </dependency>
+		<!-- https://mvnrepository.com/artifact/org.apache.shiro/shiro-web -->
+		<dependency>
+			<groupId>org.apache.shiro</groupId>
+			<artifactId>shiro-web</artifactId>
+			<version>1.3.2</version>
+		</dependency>
+		<dependency>
+			<groupId>mysql</groupId>
+			<artifactId>mysql-connector-java</artifactId>
+			<version>6.0.6</version>
+		</dependency>
+        <dependency>
+            <groupId>org.hibernate</groupId>
+            <artifactId>hibernate-entitymanager</artifactId>
+            <version>5.0.10.Final</version>
+        </dependency>
     </dependencies>
 	<build>
 		<finalName>users-service</finalName>
