--- a/unihub/users-service/src/main/webapp/WEB-INF/web.xml
+++ b/unihub/users-service/src/main/webapp/WEB-INF/web.xml
@@ -30,4 +30,22 @@ http://xmlns.jcp.org/xml/ns/javaee/web-app_3_1.xsd">
 		</web-resource-collection>
 
 	</security-constraint>
+
+	<listener>
+		<listener-class>org.apache.shiro.web.env.EnvironmentLoaderListener</listener-class>
+	</listener>
+
+	<filter>
+		<filter-name>ShiroFilter</filter-name>
+		<filter-class>org.apache.shiro.web.servlet.ShiroFilter</filter-class>
+	</filter>
+
+	<filter-mapping>
+		<filter-name>ShiroFilter</filter-name>
+		<url-pattern>/*</url-pattern>
+		<dispatcher>REQUEST</dispatcher>
+		<dispatcher>FORWARD</dispatcher>
+		<dispatcher>INCLUDE</dispatcher>
+		<dispatcher>ERROR</dispatcher>
+	</filter-mapping>
 </web-app>
