Finish Shiro configuration for routes security. Modify sql schema to have Users and Hashes table.

--- a/unihub/post-service/src/main/webapp/WEB-INF/shiro.ini
+++ b/unihub/post-service/src/main/webapp/WEB-INF/shiro.ini
@@ -1,9 +1,9 @@
 [main]
 listener = org.apache.shiro.config.event.LoggingBeanEventListener
 
-shiro.loginUrl = "/rest/users/login"
+shiro.loginUrl = "/users/login"
 # todo: set to true
-shiro.postOnlyLogout = true
+shiro.postOnlyLogout = false
 
 sessionManager = org.apache.shiro.web.session.mgt.DefaultWebSessionManager
 securityManager.sessionManager = $sessionManager
@@ -17,24 +17,28 @@ jdbcRealm=org.apache.shiro.realm.jdbc.JdbcRealm
 jdbcRealm.authenticationQuery = SELECT passwd from USERS where username = ?
 jdbcRealm.userRolesQuery = SELECT role from USERS where username = ?
 
+;ds = com.mysql.cj.jdbc.MysqlDataSource
+;ds.serverName = localhost
+;ds.port = 13306
+;ds.user = root
+;ds.password = admin
+;ds.databaseName = UNIHUB_DB
 ds = org.apache.shiro.jndi.JndiObjectFactory
 ds.resourceName = UNIHUBDS
 jdbcRealm.dataSource= $ds
 
-; Default hashing algorithm: SHA-256 with 500'000 iterations
-passwordService = org.apache.shiro.authc.credential.DefaultPasswordService
-passwordMatcher = org.apache.shiro.authc.credential.PasswordMatcher
-passwordMatcher.passwordService = $passwordService
-jdbcRealm.credentialsMatcher = $passwordMatcher
-
 authc.loginUrl = /login
 user.loginUrl = /login
 
+;passwordMatcher = org.apache.shiro.authc.credential.Sha256CredentialsMatcher
+;credentialsMatcher = org.apache.shiro.authc.credential.HashedCredentialsMatcher
+;credentialsMatcher.hashAlgorithmName = SHA-256
+;credentialsMatcher.storedCredentialsHexEncoded = true
+;credentialsMatcher.hashIterations = 5000
+
 [urls]
-/rest/users/add = anon
-/rest/users/login = anon
-/rest/users/nbUsers = anon
-/rest/users/** = authc
+/rest/posts/addPost = authc
+/rest/posts/** = anon
 
 #/login = authc
 #/logout = logout
