Modify schema to let Shiro handle salt and hashing. Creating users ang logging in works.

--- a/unihub/users-service/src/main/webapp/WEB-INF/shiro.ini
+++ b/unihub/users-service/src/main/webapp/WEB-INF/shiro.ini
@@ -13,9 +13,10 @@ securityManager.sessionManager.sessionIdUrlRewritingEnabled = false
 # YOU MUST SET THIS TO A UNIQUE STRING
 securityManager.rememberMeManager.cipherKey = kPH+bIxk5D2deZiIxcaaaA==
 
+#jdbcRealm=org.apache.shiro.realm.jdbc.JdbcRealm
 jdbcRealm=org.apache.shiro.realm.jdbc.JdbcRealm
-jdbcRealm.authenticationQuery = SELECT passwd from USERS where username = ?
-jdbcRealm.userRolesQuery = SELECT role from USERS where username = ?
+jdbcRealm.authenticationQuery = SELECT PASSWD FROM USERS WHERE USERNAME = ?
+jdbcRealm.userRolesQuery = SELECT ROLE from USERS where username = ?
 
 ds = org.apache.shiro.jndi.JndiObjectFactory
 ds.resourceName = UNIHUBDS
