Minor modifications + add shiro configuration file to posts-service (as an example for other services)

--- a/unihub/users-service/src/main/webapp/WEB-INF/shiro.ini
+++ b/unihub/users-service/src/main/webapp/WEB-INF/shiro.ini
@@ -3,7 +3,6 @@ listener = org.apache.shiro.config.event.LoggingBeanEventListener
 
 shiro.loginUrl = "/rest/users/login"
 shiro.logoutUrl = "/rest/users/logout"
-# todo: set to true
 shiro.postOnlyLogout = true
 
 sessionManager = org.apache.shiro.web.session.mgt.DefaultWebSessionManager
@@ -29,9 +28,9 @@ passwordMatcher = org.apache.shiro.authc.credential.PasswordMatcher
 passwordMatcher.passwordService = $passwordService
 jdbcRealm.credentialsMatcher = $passwordMatcher
 
-authc.loginUrl = /login
-logout.redirectUrl = /defaultLogoutUrl
-user.loginUrl = /login
+authc.loginUrl = ../../../login
+logout.redirectUrl = ../../../defaultLogoutUrl
+user.loginUrl = ../../../login
 
 [urls]
 /rest/users/add = anon
