--- a/unihub/post-service/src/main/webapp/WEB-INF/shiro.ini
+++ b/unihub/post-service/src/main/webapp/WEB-INF/shiro.ini
@@ -1,10 +1,6 @@
 [main]
 listener = org.apache.shiro.config.event.LoggingBeanEventListener
 
-shiro.loginUrl = "/users/login"
-# todo: set to true
-shiro.postOnlyLogout = false
-
 sessionManager = org.apache.shiro.web.session.mgt.DefaultWebSessionManager
 securityManager.sessionManager = $sessionManager
 securityManager.sessionManager.sessionIdUrlRewritingEnabled = false
@@ -13,32 +9,27 @@ securityManager.sessionManager.sessionIdUrlRewritingEnabled = false
 # YOU MUST SET THIS TO A UNIQUE STRING
 securityManager.rememberMeManager.cipherKey = kPH+bIxk5D2deZiIxcaaaA==
 
+#jdbcRealm=org.apache.shiro.realm.jdbc.JdbcRealm
 jdbcRealm=org.apache.shiro.realm.jdbc.JdbcRealm
-jdbcRealm.authenticationQuery = SELECT passwd from USERS where username = ?
-jdbcRealm.userRolesQuery = SELECT role from USERS where username = ?
+jdbcRealm.authenticationQuery = SELECT PASSWD FROM USERS WHERE USERNAME = ?
+jdbcRealm.userRolesQuery = SELECT ROLE from USERS where username = ?
 
-;ds = com.mysql.cj.jdbc.MysqlDataSource
-;ds.serverName = localhost
-;ds.port = 13306
-;ds.user = root
-;ds.password = admin
-;ds.databaseName = UNIHUB_DB
 ds = org.apache.shiro.jndi.JndiObjectFactory
 ds.resourceName = UNIHUBDS
 jdbcRealm.dataSource= $ds
 
-authc.loginUrl = /login
-user.loginUrl = /login
+; Default hashing algorithm: SHA-256 with 500'000 iterations
+passwordService = org.apache.shiro.authc.credential.DefaultPasswordService
+passwordMatcher = org.apache.shiro.authc.credential.PasswordMatcher
+passwordMatcher.passwordService = $passwordService
+jdbcRealm.credentialsMatcher = $passwordMatcher
 
-;passwordMatcher = org.apache.shiro.authc.credential.Sha256CredentialsMatcher
-;credentialsMatcher = org.apache.shiro.authc.credential.HashedCredentialsMatcher
-;credentialsMatcher.hashAlgorithmName = SHA-256
-;credentialsMatcher.storedCredentialsHexEncoded = true
-;credentialsMatcher.hashIterations = 5000
+authc.loginUrl = ../../../login
+logout.redirectUrl = ../../../defaultLogoutUrl
+user.loginUrl = ../../../login
 
 [urls]
-/rest/posts/addPost = authc
-/rest/posts/** = anon
+/rest/posts/** = authc
 
 #/login = authc
 #/logout = logout
