Change account creation "pipeline" to include a "confirmation" middlestep. The only step reamining is to send an email having the right url to confirm the account.

--- a/unihub/users-service/src/main/webapp/WEB-INF/shiro.ini
+++ b/unihub/users-service/src/main/webapp/WEB-INF/shiro.ini
@@ -15,7 +15,7 @@ securityManager.rememberMeManager.cipherKey = kPH+bIxk5D2deZiIxcaaaA==
 
 #jdbcRealm=org.apache.shiro.realm.jdbc.JdbcRealm
 jdbcRealm=org.apache.shiro.realm.jdbc.JdbcRealm
-jdbcRealm.authenticationQuery = SELECT PASSWD FROM USERS WHERE USERNAME = ?
+jdbcRealm.authenticationQuery = SELECT PASSWD FROM USERS WHERE USERNAME = ? AND CONFIRMED = TRUE
 jdbcRealm.userRolesQuery = SELECT ROLE from USERS where username = ?
 
 ds = org.apache.shiro.jndi.JndiObjectFactory
