Finish last piece of the email account confirmation system: the email sender. Closes #4.
We now have an email unihuborg@gmail.com. Emails go through google's SMTP secured servers.

--- a/unihub/users-service/src/main/webapp/WEB-INF/shiro.ini
+++ b/unihub/users-service/src/main/webapp/WEB-INF/shiro.ini
@@ -34,6 +34,7 @@ user.loginUrl = ../../../login
 
 [urls]
 /rest/users/add = anon
+/rest/users/confirm = anon
 /rest/users/login = anon
 /rest/users/logout = logout
 /rest/users/nbUsers = anon
