--- a/unihub/users-service/pom.xml
+++ b/unihub/users-service/pom.xml
@@ -29,4 +29,11 @@
 		<failOnMissingWebXml>true</failOnMissingWebXml>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 	</properties>
+	<dependencies>
+		<dependency>
+			<groupId>org.simplejavamail</groupId>
+			<artifactId>simple-java-mail</artifactId>
+			<version>5.0.3</version>
+		</dependency>
+	</dependencies>
 </project>
