--- a/unihub/pom.xml
+++ b/unihub/pom.xml
@@ -49,7 +49,7 @@
 			<artifactId>junit</artifactId>
 			<version>4.12</version>
 		</dependency>
-		
+
 		<dependency>
 			<groupId>org.jboss.shrinkwrap.resolver</groupId>
 			<artifactId>shrinkwrap-resolver-depchain</artifactId>
@@ -95,7 +95,28 @@
 			<version>0.7.4.201502262128</version>
 			<scope>test</scope>
 		</dependency>
-
+		<dependency>
+			<groupId>org.apache.shiro</groupId>
+			<artifactId>shiro-core</artifactId>
+			<version>1.3.2</version>
+		</dependency>
+		<!-- https://mvnrepository.com/artifact/org.apache.shiro/shiro-web -->
+		<dependency>
+			<groupId>org.apache.shiro</groupId>
+			<artifactId>shiro-web</artifactId>
+			<version>1.3.2</version>
+		</dependency>
+		<dependency>
+			<groupId>mysql</groupId>
+			<artifactId>mysql-connector-java</artifactId>
+			<version>6.0.6</version>
+		</dependency>
+		<dependency>
+			<groupId>org.hibernate</groupId>
+			<artifactId>hibernate-entitymanager</artifactId>
+			<version>5.0.10.Final</version>
+			<scope>provided</scope>
+		</dependency>
 	</dependencies>
 
 
@@ -145,6 +166,6 @@
 	<modules>
 		<module>users-service</module>
 		<module>search-service</module>
-		<module>post-service</module>
-	</modules>
+    <module>post-service</module>
+  </modules>
 </project>
