--- a/unihub/post-service/src/main/webapp/WEB-INF/web.xml
+++ b/unihub/post-service/src/main/webapp/WEB-INF/web.xml
@@ -28,4 +28,18 @@ http://xmlns.jcp.org/xml/ns/javaee/web-app_3_1.xsd">
 			<http-method>DELETE</http-method>
 		</web-resource-collection>
 	</security-constraint>
+
+	<listener>
+		<listener-class>org.apache.shiro.web.env.EnvironmentLoaderListener</listener-class>
+	</listener>
+
+	<filter>
+		<filter-name>ShiroFilter</filter-name>
+		<filter-class>org.apache.shiro.web.servlet.ShiroFilter</filter-class>
+	</filter>
+
+	<filter-mapping>
+		<filter-name>ShiroFilter</filter-name>
+		<url-pattern>/*</url-pattern>
+	</filter-mapping>
 </web-app>
