Edited shiro.ini of posts-service so it could be accessed by anonymous users, and added a service to GET a list of posts (from id1 to id2)

--- a/unihub/post-service/src/main/webapp/WEB-INF/shiro.ini
+++ b/unihub/post-service/src/main/webapp/WEB-INF/shiro.ini
@@ -29,7 +29,7 @@ logout.redirectUrl = ../../../defaultLogoutUrl
 user.loginUrl = ../../../login
 
 [urls]
-/rest/posts/** = authc
+/rest/posts/** = anon
 
 #/login = authc
 #/logout = logout
