Trying to fix Travis-CI

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,2 +1,6 @@
 language: java
-install: "cd unihub && mvn clean install"
+before_install:
+	- cd unihub/docker-config
+	- ./runDocker.sh
+	- cd ..
+install: mvn clean install
