Changed the nbPosts rest service so it returns only parent posts

--- a/unihub/users-service/src/main/webapp/WEB-INF/shiro.ini
+++ b/unihub/users-service/src/main/webapp/WEB-INF/shiro.ini
@@ -41,7 +41,7 @@ user.loginUrl = ../../../login
 /rest/users/login = anon
 /rest/users/logout = logout
 /rest/users/nbUsers = anon
-/rest/users/** = authc
+/rest/users/** = anon
 
 #/login = authc
 #/logout = logout
