--- a/unihub/pom.xml
+++ b/unihub/pom.xml
@@ -153,8 +153,30 @@
 						</fileset>
 					</filesets>
 				</configuration>
-
 			</plugin>
+		     <plugin>
+		        <groupId>org.jacoco</groupId>
+		        <artifactId>jacoco-maven-plugin</artifactId>
+		        <version>0.7.4.201502262128</version>
+		        <executions>
+		           <execution>
+		              <goals>
+		                 <goal>prepare-agent</goal>
+		              </goals>
+		           </execution>
+		           <execution>
+		              <id>report</id>
+		              <phase>prepare-package</phase>
+		              <goals>
+		                 <goal>report</goal>
+		              </goals>
+				    <configuration>
+				        <!-- Sets the output directory for the code coverage report. -->
+				        <outputDirectory>.</outputDirectory>
+				    </configuration>
+		           </execution>
+		        </executions>
+		     </plugin>
 		</plugins>
 	</build>
 	<properties>
