--- a/unihub/post-service/src/main/webapp/WEB-INF/shiro.ini
+++ b/unihub/post-service/src/main/webapp/WEB-INF/shiro.ini
@@ -25,7 +25,7 @@ passwordMatcher.passwordService = $passwordService
 jdbcRealm.credentialsMatcher = $passwordMatcher
 
 authc.loginUrl = ../../../login
-logout.redirectUrl = ../../../defaultLogoutUrl
+logout.redirectUrl = http://localhost:8080/
 user.loginUrl = ../../../login
 
 [urls]
