--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,13 @@ jdk: openjdk8
 sudo: required
 services:
   - docker
+addons:
+  apt:
+    packages:
+      - docker-ce
 before_install:
+  - sudo apt-get update
+  - sudo apt-get -y -o Dpkg::Options::="--force-confnew" install docker-ce
   - mkdir /opt/docker-deploy
   - cd unihub/docker-config
   - ./runDocker.sh
