Keep the old good 5.7 mysql's version and not the hot new one that docker decided to use last week

--- a/unihub/docker-config/database/Dockerfile
+++ b/unihub/docker-config/database/Dockerfile
@@ -1,4 +1,4 @@
-FROM mysql:latest
+FROM mysql:5.7
 MAINTAINER martin.jeremie42@gmail.com
 
 COPY ./100_schema.sql ./200_init_data.sql /docker-entrypoint-initdb.d/
