Modfiy isLoggedIn to return if the user is logged in and the user itself (or null if the user is anonymous).
Also hide jacoco and test coverage files

--- a/unihub/.gitignore
+++ b/unihub/.gitignore
@@ -20,7 +20,6 @@ buildNumber.properties
 cmake-build-debug/
 cmake-build-release/
 
-
 # File-based project format
 *.iws
 
@@ -43,3 +42,8 @@ fabric.properties
 
 *.jar
 !libs/**/*.jar
+
+*.html
+**/.resources
+**/jacoco.csv
+**/jacoco.xml
