--- a/unihub/pom.xml
+++ b/unihub/pom.xml
@@ -117,6 +117,17 @@
 			<version>5.0.10.Final</version>
 			<scope>provided</scope>
 		</dependency>
+		<dependency>
+			<groupId>org.jboss.shrinkwrap.resolver</groupId>
+			<artifactId>shrinkwrap-resolver-api-maven</artifactId>
+			<version>RELEASE</version>
+			<scope>compile</scope>
+		</dependency>
+		<dependency>
+			<groupId>com.google.code.gson</groupId>
+			<artifactId>gson</artifactId>
+			<version>2.8.2</version>
+		</dependency>
 	</dependencies>
 
 
@@ -188,6 +199,7 @@
 	<modules>
 		<module>users-service</module>
 		<module>search-service</module>
-    <module>post-service</module>
+    	<module>post-service</module>
+		<module>notifications-service</module>
   </modules>
 </project>
