--- a/unihub/notifications-service/src/main/webapp/WEB-INF/shiro.ini
+++ b/unihub/notifications-service/src/main/webapp/WEB-INF/shiro.ini
@@ -33,7 +33,7 @@ logout.redirectUrl = http://localhost:8080
 user.loginUrl = ../../../login
 
 [urls]
-/notifications/** = authc
+/** = authc
 
 #/login = authc
 #/logout = logout
