--- a/unihub/notifications-service/src/main/webapp/WEB-INF/web.xml
+++ b/unihub/notifications-service/src/main/webapp/WEB-INF/web.xml
@@ -8,4 +8,18 @@ http://xmlns.jcp.org/xml/ns/javaee/web-app_3_1.xsd">
 		<auth-method>BASIC</auth-method>
 		<realm-name>unihub-realm</realm-name>
 	</login-config>
+
+	<listener>
+		<listener-class>org.apache.shiro.web.env.EnvironmentLoaderListener</listener-class>
+	</listener>
+
+	<filter>
+		<filter-name>ShiroFilter</filter-name>
+		<filter-class>org.apache.shiro.web.servlet.ShiroFilter</filter-class>
+	</filter>
+
+	<filter-mapping>
+		<filter-name>ShiroFilter</filter-name>
+		<url-pattern>/*</url-pattern>
+	</filter-mapping>
 </web-app>
