In the process of providing authentication and security for the notifications websocket, but I canno't go further until we don't find a way to send those remember me cookies to the server.

--- a/unihub/notifications-service/src/main/webapp/WEB-INF/shiro.ini
+++ b/unihub/notifications-service/src/main/webapp/WEB-INF/shiro.ini
@@ -33,9 +33,5 @@ logout.redirectUrl = http://localhost:8080
 user.loginUrl = ../../../login
 
 [urls]
-/** = authc
-
-#/login = authc
-#/logout = logout
-#/member/** = user, multipleroles["admin", "guest"]
-#/admin/** = user, roles[admin]
+/authenticator/** = anon
+/** = anon
