--- a/unihub/notifications-service/src/main/webapp/WEB-INF/web.xml
+++ b/unihub/notifications-service/src/main/webapp/WEB-INF/web.xml
@@ -9,6 +9,24 @@ http://xmlns.jcp.org/xml/ns/javaee/web-app_3_1.xsd">
 		<realm-name>unihub-realm</realm-name>
 	</login-config>
 
+	<servlet>
+		<servlet-name>javax.ws.rs.core.Application</servlet-name>
+	</servlet>
+	<servlet-mapping>
+		<servlet-name>javax.ws.rs.core.Application</servlet-name>
+		<url-pattern>/rest/*</url-pattern>
+	</servlet-mapping>
+
+	<security-constraint>
+		<web-resource-collection>
+			<web-resource-name>Rest Facade</web-resource-name>
+			<url-pattern>/rest/*</url-pattern>
+			<http-method>GET</http-method>
+			<http-method>POST</http-method>
+			<http-method>PUT</http-method>
+			<http-method>DELETE</http-method>
+		</web-resource-collection>
+	</security-constraint>
 	<listener>
 		<listener-class>org.apache.shiro.web.env.EnvironmentLoaderListener</listener-class>
 	</listener>
