--- a/.travis.yml
+++ b/.travis.yml
@@ -1,29 +1,26 @@
 language: java
 jdk: openjdk8
+addons:
+  ssh_known_hosts:
+  - $STAGING_SERVER
+  - $PRODUCTION_SERVER
+
+before_script:
+  - echo -e "Host $STAGING_SERVERntStrictHostKeyChecking non" >> ~/.ssh/config
+  - echo -e "Host $PRODUCTION_SERVERntStrictHostKeyChecking non" >> ~/.ssh/config
+
 before_install:
-  - mkdir /opt/docker-deploy
-  - cd unihub/docker-config
-  - ./runDocker.sh
-  - cd ..
-  - sleep 10
-  - touch /opt/docker-deploy/test
-  - sleep 5
-  - ls /opt/docker-deploy/
-  - sleep 5
-  - ls /opt/docker-deploy/
-  - sleep 5
-  - ls /opt/docker-deploy/
-  - docker ps
-  - uname -a
-  - whoami
-install: mvn jacoco:prepare-agent clean test
+- openssl aes-256-cbc -K $ENCRYPTED_KEY -iv $ENCRYPTED_IV -in deploy_rsa.enc -out /tmp/deploy_rsa -d
+- eval "$(ssh-agent -s)"
+- chmod 600 /tmp/deploy_rsa
+- ssh-add /tmp/deploy_rsa
+- mkdir /opt/docker-deploy
+- cd unihub/docker-config
+- "./runDocker.sh"
+- cd ..
+
+install: mvn clean install
 after_success:
-  - mvn jacoco:report
-  - bash <(curl -s https://codecov.io/bash)
-after_failure:
-  - docker ps
-  - ls /opt/docker-deploy
-  - sleep 10
-  - mvn clean
-  - sleep 10
-  - mvn clean install
+- bash <(curl -s https://codecov.io/bash)
+- scp -p22 `find /opt/docker-deploy/ -iname "*.war"` $PRODUCTION_SERVER_USER@$PRODUCTION_SERVER:/opt/docker-deploy/
+
