--- a/.travis.yml
+++ b/.travis.yml
@@ -1,12 +1,10 @@
 language: java
 jdk: openjdk8
 addons:
-  ssh_known_hosts:
-  - $PRODUCTION_SERVER
-
+  ssh_known_hosts: 129.194.69.128
 before_install:
-- echo -e "Host $PRODUCTION_SERVERntStrictHostKeyChecking non" >> ~/.ssh/config
-- openssl aes-256-cbc -K $ENCRYPTED_KEY -iv $ENCRYPTED_IV -in deploy_rsa.enc -out /tmp/deploy_rsa -d
+- openssl aes-256-cbc -K $encrypted_706caab74578_key -iv $encrypted_706caab74578_iv
+  -in deploy_rsa.enc -out deploy_rsa -d
 - eval "$(ssh-agent -s)"
 - chmod 600 /tmp/deploy_rsa
 - ssh-add /tmp/deploy_rsa
@@ -14,9 +12,7 @@ before_install:
 - cd unihub/docker-config
 - "./runDocker.sh"
 - cd ..
-
 install: mvn clean install
 after_success:
 - bash <(curl -s https://codecov.io/bash)
-- scp -p22 `find /opt/docker-deploy/ -iname "*.war"` $PRODUCTION_SERVER_USER@$PRODUCTION_SERVER:/opt/docker-deploy/
-
+- scp `find /opt/docker-deploy/ -iname "*.war"` martijs0@129.194.69.128:/opt/docker-deploy/
