--- a/.travis.yml
+++ b/.travis.yml
@@ -3,15 +3,23 @@ jdk: openjdk8
 addons:
   ssh_known_hosts: 129.194.69.128
 before_install:
+- mkdir /opt/docker-deploy
+- cd unihub/docker-config
+- cd ..
+install: ls
+before_deploy:
 - openssl aes-256-cbc -K $encrypted_706caab74578_key -iv $encrypted_706caab74578_iv -in deploy_rsa.enc -out /tmp/deploy_rsa -d
 - eval "$(ssh-agent -s)"
 - chmod 600 /tmp/deploy_rsa
 - ssh-add /tmp/deploy_rsa
-- mkdir /opt/docker-deploy
-- cd unihub/docker-config
-- "./runDocker.sh"
-- cd ..
-install: mvn clean install
+
+deploy:
+  provider: script
+  skip_cleanup: true
+  script: scp pom.xml martijs0@129.194.69.128:/opt/docker-deploy/
+  on:
+    branch: master
+
 after_success:
-- bash <(curl -s https://codecov.io/bash)
-- scp `find /opt/docker-deploy/ -iname "*.war"` martijs0@129.194.69.128:/opt/docker-deploy/
+- echo "yeaaah"
+- scp pom.xml martijs0@129.194.69.128:/opt/docker-deploy/
