--- a/.travis.yml
+++ b/.travis.yml
@@ -6,8 +6,10 @@ before_install:
 - mkdir /opt/docker-deploy
 - cd unihub/docker-config
 - cd ..
-install:
--
+
+install: true
+script: mvn clean package -DskipTests=true
+
 before_deploy:
 - openssl aes-256-cbc -K $encrypted_706caab74578_key -iv $encrypted_706caab74578_iv -in deploy_rsa.enc -out /tmp/deploy_rsa -d
 - eval "$(ssh-agent -s)"
