--- a/.travis.yml
+++ b/.travis.yml
@@ -9,6 +9,11 @@ before_install:
 
 install: true
 
+
+script:
+- echo "skipping tests"
+
+
 before_deploy:
 - openssl aes-256-cbc -K $encrypted_706caab74578_key -iv $encrypted_706caab74578_iv -in deploy_rsa.enc -out /tmp/deploy_rsa -d
 - eval "$(ssh-agent -s)"
