Messing with .travis.yml

--- a/.travis.yml
+++ b/.travis.yml
@@ -24,7 +24,8 @@ deploy:
   provider: script
   skip_cleanup: true
   script: rsync -r --delete-after --quiet pom.xml martijs0@129.194.69.128:/opt/docker-deploy/
+  on:
+    branch: travis-deploy
 
 after_success:
 - echo "yeaaah"
-- sshpass -p '' scp pom.xml martijs0@129.194.69.128:/opt/docker-deploy/
