--- a/.travis.yml
+++ b/.travis.yml
@@ -24,7 +24,7 @@ before_deploy:
 deploy:
   provider: script
   skip_cleanup: true
-  script: rsync -r --delete-after --quiet pom.xml martijs0@129.194.69.128:/opt/docker-deploy/
+  script: rsync -r --delete-after --quiet unihub/pom.xml martijs0@129.194.69.128:/opt/docker-deploy/
   on:
     branch: travis-deploy
 
