--- a/.travis.yml
+++ b/.travis.yml
@@ -25,7 +25,7 @@ before_deploy:
 deploy:
   provider: script
   skip_cleanup: true
-  script: scp `find /opt/docker-deploy/ -iname "*.war"` martijs0@129.194.69.128:/opt/docker-deploy/
+  script: find /opt/docker-deploy/ -iname "*.war" -exec scp '{}' martijs0@129.194.69.128:/opt/docker-deploy/ ';'
   on:
     branch: travis-deploy
 
