--- a/unihub/pom.xml
+++ b/unihub/pom.xml
@@ -4,7 +4,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>ch.ranters.unihub</groupId>
 	<artifactId>unihub</artifactId>
-	<version>0.0.2-SNAPSHOT</version>
+	<version>1.0.0</version>
 	<packaging>pom</packaging>
 	<dependencies>
 		<dependency>
