--- a/unihub/users-service/pom.xml
+++ b/unihub/users-service/pom.xml
@@ -5,7 +5,7 @@
 	<parent>
 		<artifactId>unihub</artifactId>
 		<groupId>ch.ranters.unihub</groupId>
-		<version>0.0.2-SNAPSHOT</version>
+		<version>1.0.0</version>
 		<relativePath>../pom.xml</relativePath>
 	</parent>
 	<artifactId>users-service</artifactId>
