Add authentication for every module. Update security rules in notifications-service and users-service

--- a/unihub/notifications-service/src/main/webapp/WEB-INF/shiro.ini
+++ b/unihub/notifications-service/src/main/webapp/WEB-INF/shiro.ini
@@ -33,5 +33,6 @@ logout.redirectUrl = http://localhost:8080
 user.loginUrl = ../../../login
 
 [urls]
-/authenticator/** = anon
-/** = anon
+/rest/authenticator/login = anon
+/rest/authenticator/getSessionId = user
+/** = authc
