--- a/unihub/users-service/src/main/webapp/WEB-INF/shiro.ini
+++ b/unihub/users-service/src/main/webapp/WEB-INF/shiro.ini
@@ -40,8 +40,8 @@ user.loginUrl = ../../../login
 /rest/users/isLoggedIn = anon
 /rest/users/login = anon
 /rest/users/logout = logout
-/rest/users/nbUsers = anon
-/rest/users/** = anon
+/rest/users/nbUsers = user
+/rest/users/** = authc
 
 #/login = authc
 #/logout = logout
