Changed shiro permission

--- a/unihub/users-service/src/main/webapp/WEB-INF/shiro.ini
+++ b/unihub/users-service/src/main/webapp/WEB-INF/shiro.ini
@@ -41,7 +41,7 @@ user.loginUrl = ../../../login
 /rest/users/login = anon
 /rest/users/logout = logout
 /rest/users/nbUsers = user
-/rest/users/** = authc
+/rest/users/** = user
 
 #/login = authc
 #/logout = logout
