Small refactorings + change cipher key to make it unique to each shiro config file

--- a/unihub/users-service/src/main/webapp/WEB-INF/shiro.ini
+++ b/unihub/users-service/src/main/webapp/WEB-INF/shiro.ini
@@ -41,7 +41,8 @@ user.loginUrl = ../../../login
 /rest/users/login = anon
 /rest/users/logout = logout
 /rest/users/nbUsers = user
-/rest/users/** = user
+/rest/users/by_ids = user
+/** = user
 
 #/login = authc
 #/logout = logout
