--- a/unihub/users-service/src/main/webapp/WEB-INF/shiro.ini
+++ b/unihub/users-service/src/main/webapp/WEB-INF/shiro.ini
@@ -41,7 +41,7 @@ user.loginUrl = ../../../login
 /rest/users/login = anon
 /rest/users/logout = logout
 /rest/users/nbUsers = user
-/rest/users/by_ids = user
+/rest/users/by_ids = anon
 /** = user
 
 #/login = authc
