--- a/unihub/notifications-service/src/main/webapp/WEB-INF/shiro.ini
+++ b/unihub/notifications-service/src/main/webapp/WEB-INF/shiro.ini
@@ -35,4 +35,4 @@ user.loginUrl = ../../../login
 [urls]
 /rest/authenticator/login = anon
 /rest/authenticator/getSessionId = user
-/** = anon
+/** = user
