--- a/unihub/post-service/src/main/webapp/WEB-INF/shiro.ini
+++ b/unihub/post-service/src/main/webapp/WEB-INF/shiro.ini
@@ -29,7 +29,7 @@ logout.redirectUrl = http://localhost:8080/
 user.loginUrl = ../../../login
 
 [urls]
-/rest/posts/** = user
+/rest/posts/** = anon
 
 #/login = authc
 #/logout = logout
